--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         .zoom-container {
             /* 1. Set the SVG as the background image */
-            background-image: url('freihaus drawing.svg');
+            background-image: url('Freihaus drawing.svg');
             
             /* 2. Initial state: Cover the entire area */
             background-size: cover; 
