changed logo. added buttons

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
     
     <div class="content">
         <img src="Freihaus Logo.svg" alt="Freihaus Logo" class="logo">
-        <a href="test2.html" class="modern-button">Test Visualisierung</a>
-        <p>"Aktuell noch in Bau :)"</p>
+        <a href="test2.html" class="modern-button">Mein Test</a>
+        <a href="Earth.html" class="modern-button">Earth</a>
+        <a href="cylinder.html" class="modern-button">Zylinder</a>
     </div>
 
     <script>
