added new pattern

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
         <a href="test2.html" class="modern-button">Mein Test</a>
         <a href="Earth.html" class="modern-button">Earth</a>
         <a href="cylinder.html" class="modern-button">Zylinder</a>
+        <p>pattern changed</p>
     </div>
 
     <script>
