Added Bike Stand. Changed Logo

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     
     <div id="contentBox" class="content">
         <img src="Freihaus Logo.svg" alt="Freihaus Logo" class="logo">
-        <a href="test2.html" class="modern-button">Mein Test</a>
+        <a href="Bike Stand.html" class="modern-button">Fahrradständer</a>
         <a href="Earth.html" class="modern-button">Earth</a>
         <a href="cylinder.html" class="modern-button">Zylinder</a>
         <p>pattern changed</p>
