Added Multi Bike Stand Visualisation

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
     
     <div id="contentBox" class="content">
         <img src="Freihaus Logo.svg" alt="Freihaus Logo" class="logo">
-        <a href="Bike Stand.html" class="modern-button">Fahrradständer</a>
+        <a href="Bike Stand.html" class="modern-button">1 Fahrradständer</a>
+        <a href="Bike Stands.html" class="modern-button">Mehrere Fahrradständer</a>
         <a href="Earth.html" class="modern-button">Earth</a>
         <a href="cylinder.html" class="modern-button">Zylinder</a>
         <p>pattern changed</p>
